--- a/src/main/resources/templates/pacientes/modificarPacientes.html
+++ b/src/main/resources/templates/pacientes/modificarPacientes.html
@@ -132,13 +132,13 @@
                 const dni = document.getElementById('dni').value;
                 const fechaAlta = document.getElementById('fechaAlta').value;
 
-            // Validar que todos los campos estén llenos
+
             if (!nombre || !apellido || !dni) {
                 alert('Por favor, complete todos los campos.');
                 return;
             }
 
-            // Crear el objeto odontólogo
+
             const paciente = {
                  nombre: nombre,
                  apellido: apellido,
@@ -148,17 +148,17 @@
 
             };
 
-            // Hacer la solicitud POST para guardar o actualizar el odontólogo
+
             fetch('/pacientes/save', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
                 },
-                body: JSON.stringify(paciente) // Convertir el objeto a JSON
+                body: JSON.stringify(paciente)
             })
             .then(response => {
                 if (response.ok) {
-                    return response.json(); // Parsear la respuesta JSON
+                    return response.json();
                 } else {
                     throw new Error('Error al guardar el paciente');
                 }
@@ -169,7 +169,7 @@
             })
             .catch(error => {
                 console.error('Hubo un error:', error);
-                alert('Hubo un problema al guardar el odontólogo.');
+                alert('Hubo un problema al guardar el paciente.');
             });
         });
 </script>
